feat: new endpoint to finish reservation
