# src/domain/entities/Reservation.ts
@@ -5,6 +5,8 @@ export class Reservation {
         public bookCount: number,
         public returnDate: Date,
         public reservationDate: Date,
-        public isReturned: boolean
+        public isReturned: boolean,
+        public id?: string,
+        public realReturnDate?: Date
     ) {}
 }
